<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="#10439F">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:letterSpacing="0.2"
            android:text="@string/hello_keep_healthy"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.135"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="-25dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintTop_toBottomOf="@id/text">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:letterSpacing="0.1"
                    android:text="@string/check_your_skin_condition"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/text1">

                    <ImageView
                        android:id="@+id/previewImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="20dp"
                        app:srcCompat="@drawable/ic_place_holder"
                        android:contentDescription="@string/img"/>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_gallery"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#C65BCF"
                    android:text="@string/gallery"
                    android:textStyle="bold"
                    app:icon="@drawable/photo_library_fill0_wght400_grad0_opsz24"
                    app:layout_constraintEnd_toStartOf="@id/btn_history"
                    app:layout_constraintHorizontal_bias="0.206"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_history"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#C65BCF"
                    android:text="@string/history"
                    android:textStyle="bold"
                    app:icon="@drawable/history_fill0_wght400_grad0_opsz24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.827"
                    app:layout_constraintStart_toEndOf="@id/btn_gallery"
                    app:layout_constraintTop_toBottomOf="@+id/card" />

                <Button
                    android:id="@+id/btn_analyze"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#874CCC"
                    android:text="@string/analyze"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

                <View
                    android:id="@+id/horizontal_line"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="40dp"
                    android:background="#E6E6E6"
                    app:layout_constraintTop_toBottomOf="@id/btn_analyze" />

                <TextView
                    android:id="@+id/tv_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breaking_news"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/horizontal_line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_articles"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_news" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="20dp"
                    app:layout_constraintTop_toBottomOf="@id/btn_analyze"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>